refactor design and added footer

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT = 8000
-DBURI = mongodb://localhost:27017/notebook
+# DBURI = mongodb://localhost:27017/notebook
+DBURI = mongodb+srv://sahilshaiikh:c5dAbjvZ7XT2WjWs@snippet-master.yyvlly6.mongodb.net/?retryWrites=true&w=majority&appName=snippet-master
 NODE_ENV = "developement"
 
 ORIGIN = ["http://localhost:3000", "http://localhost:3001"]
@@ -9,3 +10,5 @@ REFRESHTOKENSECRET = "secret123445"
 ACCESSTOKENEXPIRATION = "1h"
 REFRESHTOKENSECRET = "secret123445"
 REFRESHTOKENEXPIRATION = "2h"
+
+password ="c5dAbjvZ7XT2WjWs"
